<?xml version="1.0"?>
<package format="2">
  <name>feetech_sdk</name>
  <version>1.0.0</version>
  <description>
    SDK for Feetech Servo Motors
  </description>
  <license>Apache 2.0</license>
  <author email="fedor@quasi.ai">Fedor Bokov</author>
  <maintainer email="fedor@quasi.ai">Fedor Bokov</maintainer>
  <url type="repository">https://github.com/masf7g/SCServo</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
</package>
